tests/cases/fail/assignment_mismatch.u
import sti.

-> main() {
  uint32 x = 1u.
  x = true.
}
